--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -20,6 +20,7 @@ formats: [pdf]
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
+  setup_py_install: true
   version: 3.7
   install:
     - requirements: requirements.txt
