--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 m2r
 sphinx_rtd_theme
 Sphinx==2.0.1
-git+https://github.com/yalemssa/aspace_tools.git
+utilities @ https://github.com/ucancallmealicia/utilities/tarball/master
