--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@ aspace_tools/scripts/
 
 aspace_tools/scripts/sql
 
-aspace_tools/implementations
-
 #pycache folder
 /__pycache__/
 
@@ -31,6 +29,29 @@ aspace_tools/implementations
 
 *.todo.MD
 
+aspace_tools/app.py
+
+aspace_tools/app_layouts.py
+
+aspace_tools/app_renderers.py
+
+aspace_tools/app_dropdown_values.py
+
 aspace_tools/data/
 
+aspace_tools/logs
+
+aspace_tools/tests
+
+aspace_tools/fixtures
+
 aspace_tools/.DS_Store
+
+aspace_tools/__pycache__
+
+aspace_tools/implementations/
+
+aspace_tools/as_tools_config.yml
+
+/interfaces/
+
