--- a/.gitignore
+++ b/.gitignore
@@ -45,11 +45,13 @@ aspace_tools/tests
 
 aspace_tools/fixtures
 
+aspace_tools/fixtures/
+
 aspace_tools/.DS_Store
 
 aspace_tools/__pycache__
 
-aspace_tools/implementations
+aspace_tools/implementations/
 
 aspace_tools/as_tools_config.yml
 
