--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,13 +7,12 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  tools:
-    os: ubuntu-20.04
-    python: "3.8"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
+  os: "ubuntu-20.04"
+  python: "3.8"
+  # You can also specify other tool versions:
+  # nodejs: "16"
+  # rust: "1.55"
+  # golang: "1.17"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
