--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,16 +7,17 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: "ubuntu-20.04"
-  python: "3.8"
-  # You can also specify other tool versions:
-  # nodejs: "16"
-  # rust: "1.55"
-  # golang: "1.17"
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+    # You can also specify other tool versions:
+    # nodejs: "16"
+    # rust: "1.55"
+    # golang: "1.17"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: conf.py
+   configuration: docs/conf.py
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
@@ -25,4 +26,4 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: requirements.txt
+   - requirements: docs/requirements.txt
