--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,8 +6,6 @@ decorator==4.4.0
 pandas==1.2.0
 PyYAML==6.0
 rich==12.5.1
-mistune==0.8.4
-m2r==0.2.1
-m2r2==0.3.2
 sshtunnel==0.4.0
 sphinx-autoapi==1.9.0
+sphinx-mdinclude=0.5.1
